# rag

./: .coverage  .gitignore  README.md  build-log.txt  buildspec.yml  cdk-output.json  cdk.json  codebuild-log.json  jest.config.js  mapping.json  package-lock.json  package.json  temp-template.json  temp_mapping.json  temp_statistics.json  tsconfig.json
medical-claims-generator/: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
medical-claims-generator/examples/: README.md  basic_usage.sh  reproducible_generation.sh  s3_upload.sh
medical-claims-generator/output/fhir/: Ashely524_Maybelle917_Brakus656_d545798e-09a4-ef89-abc5-9f62dc5a5095.json  Kimi714_Katerine813_Boyer713_eed8a921-eac8-0778-4113-255f4e35506a.json  Louie190_Danita413_Mohr916_3c4b499b-090b-c6fa-28d7-b56c6056d0a2.json  Miguel815_Bashirian201_5393ea7f-1fea-4064-9df4-460a2f662d07.json  hospitalInformation1772631159394.json  practitionerInformation1772631159394.json
medical-claims-generator/output/metadata/: 2026_03_04T13_32_39Z_5_Massachusetts_d3ff02ec_ab0d_4309_ad02_30d510784a54.json
medical-claims-generator/src/medical_claims_generator/: __init__.py  document_generator.py  main.py  models.py  orchestrator.py  output_organizer.py  patient_generator.py  patient_mapper.py  s3_uploader.py  statistics_generator.py  validator.py
medical-claims-generator/src/medical_claims_generator/pdf_generators/: __init__.py  clinical_note_generator.py  cms1500_generator.py  eob_generator.py  radiology_report_generator.py
medical-claims-generator/synthea/output/fhir/: Aja848_Caron739_Wisoky380_ea8df98b-6ed8-2f53-9f6a-80af4fa3bd0f.json  (+25 more)
medical-claims-generator/tests/: __init__.py  test_clinical_note_generator.py  test_cms1500_generator.py  test_document_generator.py  test_eob_generator.py  test_eob_visual.py  test_main.py  test_models.py  test_orchestrator.py  test_output_organizer.py  test_patient_generator.py  test_patient_mapper.py  test_radiology_report_generator.py  test_s3_uploader.py  test_statistics_generator.py  test_validator.py
(+186 files in other folders)
